--- a/base.css
+++ b/base.css
@@ -940,7 +940,12 @@ background: none;
     margin-bottom: 0px;
 }
 
-
+a.navbar-brand{
+background-image: url(http://i.imgur.com/IBQkZbg.png)!important;
+background-repeat: no-repeat;
+width: 16px;
+height: 12px;
+						}
 
 .vjs-error .vjs-error-display:before {
     content: 'X';
