--- a/base.css
+++ b/base.css
@@ -1270,7 +1270,7 @@ body {
     font-size: calc(100% + ((0.4vw - .41rem) * 1.189));
 }
 .timestamp {
-     font-size: 7pt;
+     font-size: 6pt;
     float: left;
     display: block;
     opacity: 0;
@@ -1278,8 +1278,8 @@ body {
     margin-top: 0px;
     width: 52px;
     position: absolute;
-    color: #d0d0d0;
-    background: rgba(0, 0, 0, 0.05);
+    color: rgba(197, 196, 175, 0.8);
+    background: rgba(0, 0, 0, 0.84);
     padding: 1px 4px;
     text-decoration: none;
     border-radius: 5px;
@@ -2404,7 +2404,9 @@ input[type="range"]::-webkit-slider-thumb:active {
     max-height: 50px!important;
 }
 .vjs-menu-button.vjs-menu-button-popup.vjs-control.vjs-button.vjs-resolution-button {
-    right: 11px;
+    left: 110px;
+    margin-right: 30px;
+    float: right;
     bottom: 5px;
 }
 @keyframes flickering {
@@ -2471,3 +2473,4 @@ input[type="range"]::-webkit-slider-thumb:active {
     opacity: 1;
     filter: alpha(opacity=50);
 }
+.timestamp:hover {opacity:1;}
