--- a/base.css
+++ b/base.css
@@ -33,7 +33,7 @@ body {
     border-radius: 15px;
 }
 .btn-default {
-    color: #B5B5B5;
+    color: #E6E2E25;
     background-color: rgba(31, 27, 30, 0.77);
     border-color: rgba(132, 142, 152, 0);
     background-image: none!important;
